Quick and dirty hack to get this running on Mac OS Ventura on M1